# plsql-intelligence

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  PUBLISHING.md  README.md  deny.toml  install.ps1  install.sh  plan.md  rust-toolchain.toml  server.json
crates/oraclemcp/: Cargo.toml
crates/oraclemcp-audit/: Cargo.toml
crates/oraclemcp-audit/src/: lib.rs  record.rs  sink.rs  unified.rs
crates/oraclemcp-auth/: Cargo.toml
crates/oraclemcp-auth/src/: http_guard.rs  lib.rs  oauth_rs.rs  scope.rs  secrets.rs  stepup_delivery.rs  vault_dynamic.rs
crates/oraclemcp-config/: Cargo.toml
crates/oraclemcp-config/src/: lib.rs  profile.rs
crates/oraclemcp-core/: Cargo.toml
crates/oraclemcp-core/src/: admin_auth.rs  admission.rs  capabilities.rs  connect.rs  custom_tools.rs  doctor.rs  http.rs  init_token.rs  lib.rs  plugin.rs  query_execute.rs  resilience.rs  resources.rs  server.rs  session_tool.rs  shutdown.rs  subscriptions.rs  tls.rs  tools.rs  trace.rs
crates/oraclemcp-core/tests/: chaos.rs  e2e_mcp.rs
crates/oraclemcp-db/: Cargo.toml
crates/oraclemcp-db/src/: auth_adapter.rs  awr.rs  connection.rs  doctor.rs  drcp.rs  error.rs  intelligence.rs  lease.rs  lib.rs  oci.rs  plscope.rs  pool.rs  privileges.rs  query.rs  schema_diff.rs  serialize.rs  standby.rs  types.rs
crates/oraclemcp-db/tests/: chaos.rs  live_oracle.rs  privilege_degradation.rs  type_fidelity.rs
crates/oraclemcp-error/: Cargo.toml
crates/oraclemcp-error/src/: fuzzy.rs  lib.rs
crates/oraclemcp-guard/: Cargo.toml
crates/oraclemcp-guard/fuzz/: Cargo.toml
crates/oraclemcp-guard/src/: classifier.rs  clock.rs  enforcement.rs  exec_grant.rs  levels.rs  lib.rs  policy.rs  purity.rs  stepup.rs  token.rs
crates/oraclemcp-guard/tests/: admin_dcl_fail_closed.rs  adversarial_corpus.rs  perf_classifier.rs  token_security.rs
crates/oraclemcp-telemetry/: Cargo.toml
crates/oraclemcp-telemetry/src/: health.rs  lib.rs  logging.rs  metrics.rs
crates/oraclemcp/src/: dispatch.rs  lib.rs  main.rs  registry.rs
crates/oraclemcp/tests/: e2e_stdio.rs
crates/plsql-accretion/: Cargo.toml  accretion_floor.json  gate.sha256  gate_baseline.json
crates/plsql-accretion/src/: capture.rs  cluster.rs  fixture.rs  gap.rs  gate.rs  land.rs  ledger.rs  lib.rs  proposer.rs  tokscrub.rs
crates/plsql-accretion/tests/: cluster_ledger.rs  gap_record.rs  gate_selftest.rs  land_tripwire.rs  ledger_concurrent_append.rs  min_fixture.rs  min_fixture_property.rs  privacy.rs  property.rs  proposer_gate_e2e.rs  signature_spec_conformance.rs  usr_gate_rs_cli.rs  usr_loop_scan_integration.rs
crates/plsql-bindgen/: Cargo.toml
crates/plsql-bindgen/src/: defaulted.rs  doctor.rs  emit.rs  executor.rs  lib.rs  main.rs  oracle_types.rs  overload.rs  structs.rs  type_mapping.rs
crates/plsql-bindgen/tests/: compile_invalid_ident_stub.rs  xe_roundtrip.rs
crates/plsql-catalog/: Cargo.toml
crates/plsql-catalog/examples/: generate_lab_snapshots.rs
crates/plsql-catalog/src/: lib.rs  live.rs  synthetic.rs
crates/plsql-catalog/tests/: xe_snapshot_golden.rs
crates/plsql-cicd/: Cargo.toml
crates/plsql-cicd/src/: doctor.rs  explain.rs  gate.rs  inspector.rs  lib.rs  plan.rs  post_pr_comment.rs  predict.rs  verify.rs
crates/plsql-cicd/tests/: cicd_cycle_live_xe.rs  plsql_cli.rs  verify_live_xe.rs
crates/plsql-core/: Cargo.toml
crates/plsql-core/src/: lib.rs
crates/plsql-depgraph/: Cargo.toml
crates/plsql-depgraph/src/: lib.rs  main.rs
crates/plsql-depgraph/tests/: cli.rs  e2e_30_packages.rs
crates/plsql-doc/: Cargo.toml
crates/plsql-doc/src/: doctor.rs  index.rs  lib.rs  mdx.rs  render.rs  serve.rs  svg_graph.rs  table_usage.rs
crates/plsql-doc/tests/: e2e_corpus.rs
crates/plsql-engine/: Cargo.toml
crates/plsql-engine/src/: lib.rs  main.rs
crates/plsql-engine/tests/: analyze_invocation_failure.rs
crates/plsql-ir/: Cargo.toml
crates/plsql-ir/src/: calls.rs  canonical.rs  column_edges.rs  decl.rs  dml_edges.rs  expr.rs  fact.rs  fact_emit.rs  flow.rs  flow_inter.rs  flow_intra.rs  flow_query.rs  lib.rs  lower.rs  recursion_guard.rs  sql_columns.rs  sql_fact_emit.rs  sql_resolve.rs  sql_sem.rs  stmt.rs  table_stub.rs
crates/plsql-lineage/: Cargo.toml
crates/plsql-lineage/src/: lib.rs
crates/plsql-lineage/tests/: e2e_50_packages.rs
crates/plsql-mcp/: Cargo.toml
crates/plsql-mcp/src/: analyze_project.rs  audit.rs  change_tools.rs  compile.rs  config.rs  connections.rs  create_or_replace.rs  cross_schema.rs  describe.rs  dispatch.rs  doctor.rs  execute_approved.rs  foundation_tools.rs  graph_tools.rs  identifier.rs  impact.rs  lib.rs  list_objects.rs  live_runtime.rs  main.rs  mcp_protocol.rs  oraclemcp_catalog.rs  parse_tools.rs  patch.rs  plsql_analyze.rs  preview.rs  query.rs  safety.rs  source.rs  tcp.rs  tools.rs  transport.rs  trust.rs
crates/plsql-mcp/tests/: clob_parity_live_xe.rs  hero_demo.rs  hero_demo_dropcol_live_xe.rs  hero_demo_live_xe.rs  mcp_live_xe.rs  scripted_client.rs
crates/plsql-output/: Cargo.toml
crates/plsql-output/src/: lib.rs
crates/plsql-parser/: Cargo.toml
crates/plsql-parser-antlr/: Cargo.toml  LICENSE-GRAMMARS.md  build.rs
crates/plsql-parser-antlr/src/: backend.rs  lib.rs  recover.rs  tree_lower.rs
crates/plsql-parser-antlr/tests/: antlr4rust_backend.rs  codegen_builds.rs  corpus_harness.rs  snapshot_constructs.rs  tree_lower.rs  zz_audit_phantom_ddl_probe.rs
crates/plsql-parser-java/: Cargo.toml
crates/plsql-parser-java/src/: lib.rs  wire.rs
crates/plsql-parser/src/: ast.rs  dialect.rs  lib.rs  tokens.rs  visit.rs
crates/plsql-parser/tests/: conformance.rs  dialect_features.rs  (+2 more)
crates/plsql-privileges/: Cargo.toml
crates/plsql-project/: Cargo.toml
crates/plsql-render/: Cargo.toml
crates/plsql-sast/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: catalog_async_loader.rs  catalog_snapshot_json.rs  ir_lower_statement_body.rs  live_runtime_ops.rs  lower_expression.rs  lower_statement_body.rs  lower_type_decl.rs  mcp_async_dispatch.rs  parse_lower.rs
(+272 files in other folders)
