[workspace]
members = [
    "crates/plsql-core",
    "crates/plsql-output",
    "crates/plsql-render",
    "crates/plsql-store",
    "crates/plsql-engine",
    "crates/plsql-catalog",
    "crates/plsql-depgraph",
    "crates/plsql-ir",
    "crates/plsql-privileges",
    "crates/plsql-symbols",
    "crates/plsql-parser",
    "crates/plsql-parser-antlr",
    "crates/plsql-parser-java",
    "crates/plsql-project",
    "crates/plsql-doc",
    "crates/plsql-bindgen",
    "crates/plsql-lineage",
    "crates/plsql-sast",
    "crates/plsql-cicd",
    "crates/plsql-mcp",
    "crates/plsql-support",
    "crates/plsql-accretion",
    # oraclemcp-* core crates (plan §14): engine-free MCP spine, extracted in
    # place from plsql-mcp/plsql-catalog. The CI dependency-lint enforces that
    # none of these import a plsql-* engine crate (one-way boundary, §0).
    "crates/oraclemcp-error",
    "crates/oraclemcp-config",
    "crates/oraclemcp-audit",
    "crates/oraclemcp-telemetry",
    "crates/oraclemcp-db",
    "crates/oraclemcp-guard",
    "crates/oraclemcp-auth",
    "crates/oraclemcp-core",
    "tools/corpus-bench",
    "tools/corpus-grow",
    "tools/corpus-license-check",
    "tools/plan-lint",
    "tools/usr-loop",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/MuhDur/plsql-intelligence"
homepage = "https://github.com/MuhDur/plsql-intelligence"
rust-version = "1.85"

[workspace.dependencies]
fs2 = "0.4"
miette = { version = "7", features = ["fancy-no-backtrace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
