[workspace]
members = [
    "crates/plsql-core",
    "crates/plsql-output",
    "crates/plsql-render",
    "crates/plsql-store",
    "crates/plsql-engine",
    "crates/plsql-catalog",
    "crates/plsql-depgraph",
    "crates/plsql-ir",
    "crates/plsql-privileges",
    "crates/plsql-symbols",
    "crates/plsql-parser",
    "crates/plsql-parser-antlr",
    "crates/plsql-project",
    "crates/plsql-doc",
    "crates/plsql-bindgen",
    "crates/plsql-lineage",
    "crates/plsql-sast",
    "crates/plsql-cicd",
    "crates/plsql-support",
    "crates/plsql-accretion",
    # The engine-free oraclemcp-* MCP spine (8 crates) + the lean `oraclemcp`
    # binary were extracted to the standalone MuhDur/oraclemcp repo and published
    # to crates.io (Phase-E depend-back). The in-workspace copies were removed;
    # this repo now ships only the offline PL/SQL engine and CLIs.
    "tools/corpus-bench",
    "tools/corpus-grow",
    "tools/corpus-license-check",
    "tools/plan-lint",
    "tools/usr-loop",
]
default-members = [
    "crates/plsql-core",
    "crates/plsql-output",
    "crates/plsql-render",
    "crates/plsql-store",
    "crates/plsql-engine",
    "crates/plsql-catalog",
    "crates/plsql-depgraph",
    "crates/plsql-ir",
    "crates/plsql-privileges",
    "crates/plsql-symbols",
    "crates/plsql-parser",
    "crates/plsql-parser-antlr",
    "crates/plsql-project",
    "crates/plsql-doc",
    "crates/plsql-bindgen",
    "crates/plsql-lineage",
    "crates/plsql-sast",
    "crates/plsql-cicd",
    "crates/plsql-support",
    "crates/plsql-accretion",
    "tools/corpus-bench",
    "tools/corpus-grow",
    "tools/corpus-license-check",
    "tools/plan-lint",
    "tools/usr-loop",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/MuhDur/plsql-intelligence"
homepage = "https://github.com/MuhDur/plsql-intelligence"

[workspace.dependencies]
fs2 = "0.4"
miette = { version = "7", features = ["fancy-no-backtrace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# Crash safety (plan §5.7, bead P2-2): the shipped server aborts on panic rather
# than unwinding across async server tasks. Only affects release
# builds; `cargo test` still unwinds (so #[should_panic] works).
[profile.release]
panic = "abort"
