[package]
name = "plsql-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Detach from the parent workspace so the fuzz crate's nightly/sanitizer
# build never perturbs the main workspace lockfile or CI gate.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.plsql-core]
path = "../crates/plsql-core"

[dependencies.plsql-parser-antlr]
path = "../crates/plsql-parser-antlr"

[dependencies.plsql-ir]
path = "../crates/plsql-ir"

[dependencies.plsql-catalog]
path = "../crates/plsql-catalog"

[dependencies.plsql-mcp]
path = "../crates/plsql-mcp"

[dependencies.asupersync]
version = "=0.3.4"

[dependencies.async-trait]
version = "0.1"

[dependencies.oraclemcp-core]
version = "=0.4.0"

[dependencies.oraclemcp-db]
version = "=0.4.0"

[dependencies.serde_json]
version = "1"

[[bin]]
name = "parse_lower"
path = "fuzz_targets/parse_lower.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lower_statement_body"
path = "fuzz_targets/lower_statement_body.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lower_expression"
path = "fuzz_targets/lower_expression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lower_type_decl"
path = "fuzz_targets/lower_type_decl.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ir_lower_statement_body"
path = "fuzz_targets/ir_lower_statement_body.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catalog_snapshot_json"
path = "fuzz_targets/catalog_snapshot_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mcp_async_dispatch"
path = "fuzz_targets/mcp_async_dispatch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catalog_async_loader"
path = "fuzz_targets/catalog_async_loader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "live_runtime_ops"
path = "fuzz_targets/live_runtime_ops.rs"
test = false
doc = false
bench = false
