[package]
name = "oraclemcp-db"
version = "0.1.0"
description = "Oracle connectivity, pooling, session leases and the type/NLS serializer for oraclemcp (Apache-2.0 OR MIT)"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
# Pulls in the Oracle driver (ODPI-C) + r2d2 pool + tokio spawn_blocking
# boundary. Off = pure offline build, no native deps (RustOracleConnection
# returns BackendNotCompiled).
oracle-driver = ["dep:oracle", "dep:r2d2", "dep:tokio"]
# Live Oracle integration tests (gated; require a reachable DB + Instant Client).
live-xe = ["oracle-driver"]

[dependencies]
oraclemcp-error = { path = "../oraclemcp-error" }
oraclemcp-guard = { path = "../oraclemcp-guard" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
oracle = { version = "0.6.3", optional = true }
r2d2 = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[lints]
workspace = true
