[package]
name = "oraclemcp-error"
version = "0.1.0"
description = "Structured, agent-facing error envelope for the oraclemcp Oracle MCP server (Apache-2.0 OR MIT)"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
