[package]
name = "oraclemcp"
version = "0.1.0"
description = "Engine-free Oracle Database MCP server binary (read-only live-DB tool surface) over oraclemcp-core (Apache-2.0 OR MIT)"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
# Pulls in the Oracle driver (ODPI-C / Instant Client) via oraclemcp-db so the
# live-DB tools can actually connect. Off = pure offline build with no native
# deps: RustOracleConnection::connect returns BackendNotCompiled and live tool
# calls return a structured RuntimeStateRequired envelope rather than panicking.
live-db = ["oraclemcp-db/oracle-driver"]

[[bin]]
name = "oraclemcp"
path = "src/main.rs"

[dependencies]
oraclemcp-core = { path = "../oraclemcp-core" }
oraclemcp-db = { path = "../oraclemcp-db" }
oraclemcp-config = { path = "../oraclemcp-config" }
oraclemcp-guard = { path = "../oraclemcp-guard" }
oraclemcp-error = { path = "../oraclemcp-error" }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync", "time", "net", "signal"] }
tracing.workspace = true
tracing-subscriber = "0.3"

[dev-dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util"] }

[lints]
workspace = true
