[package]
name = "plsql-accretion"
version = "0.7.0"
description = "USR loop library (Layer 5): GapRecord capture from honest-uncertainty exhaust (PLSQL-USR-001)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fs2 = { workspace = true }
plsql-core = { path = "../plsql-core", version = "0.7.0" }
plsql-engine = { path = "../plsql-engine", version = "0.7.0" }
plsql-output = { path = "../plsql-output", version = "0.7.0" }
plsql-parser = { path = "../plsql-parser", version = "0.7.0" }
plsql-parser-antlr = { path = "../plsql-parser-antlr", version = "0.7.0", features = [
    "antlr-codegen",
] }
plsql-support = { path = "../plsql-support", version = "0.7.0" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "usr-gate-rs"
path = "src/bin/usr_gate_rs.rs"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
