[package]
name = "plsql-catalog"
version = "0.1.0"
description = "Offline-first Oracle catalog snapshot model for plsql-intelligence"
edition.workspace = true
license.workspace = true

[features]
default = []
live-xe = ["oraclemcp-db"]
oraclemcp-db = ["dep:oraclemcp-db"]

[dependencies]
async-trait = "0.1"
asupersync = "=0.3.4"
chrono = { version = "0.4.44", features = ["serde"] }
oraclemcp-db = { version = "=0.4.0", optional = true }
plsql-core = { path = "../plsql-core" }
plsql-output = { path = "../plsql-output" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
