[package]
name = "plsql-catalog"
version = "0.1.2"
description = "Offline-first Oracle catalog snapshot model for plsql-intelligence"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
plsql-core = { path = "../plsql-core", version = "0.1.0" }
plsql-output = { path = "../plsql-output", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
