[package]
name = "plsql-cicd"
version = "0.6.2"
description = "CI/CD recompilation cascade types and operations for plsql-intelligence"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
## Enable the live Oracle XE 23ai integration tests for `verify`
## (oracle-m941 / PLSQL-CICD-005). Requires the `plsql-intelligence-xe`
## container running at localhost:1521/FREEPDB1.
live-xe = ["dep:asupersync", "plsql-catalog/live-xe"]

[dependencies]
async-trait = "0.1"
asupersync = { version = "=0.3.4", optional = true }
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.3"
plsql-catalog = { path = "../plsql-catalog", version = "0.1.1" }
plsql-core = { path = "../plsql-core", version = "0.1.0" }
plsql-lineage = { path = "../plsql-lineage", version = "0.1.0" }
plsql-output = { path = "../plsql-output", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml = "1.1"
tracing.workspace = true

[dev-dependencies]
plsql-depgraph = { path = "../plsql-depgraph", version = "0.6.0" }

[[bin]]
name = "plsql"
path = "src/bin/plsql.rs"

[lints]
workspace = true
