[package]
name = "plsql-doc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Documentation generation for PL/SQL packages, procedures, and objects."

[dependencies]
plsql-core = { path = "../plsql-core", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
