[package]
name = "plsql-ir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Typed semantic intermediate representation for plsql-intelligence"

[dependencies]
plsql-catalog = { path = "../plsql-catalog" }
plsql-core = { path = "../plsql-core" }
plsql-parser = { path = "../plsql-parser" }
plsql-privileges = { path = "../plsql-privileges" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
