[package]
name = "plsql-lineage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Lineage engine — cross-object impact + classify-change queries."

[dependencies]
plsql-catalog = { path = "../plsql-catalog" }
plsql-core = { path = "../plsql-core" }
plsql-depgraph = { path = "../plsql-depgraph" }
plsql-output = { path = "../plsql-output" }
plsql-render = { path = "../plsql-render" }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"

[lints]
workspace = true
