[package]
name = "plsql-lineage"
version = "0.7.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lineage engine — cross-object impact + classify-change queries."

[dependencies]
plsql-catalog = { path = "../plsql-catalog", version = "0.7.0" }
plsql-core = { path = "../plsql-core", version = "0.7.0" }
plsql-depgraph = { path = "../plsql-depgraph", version = "0.7.0" }
plsql-ir = { path = "../plsql-ir", version = "0.7.0" }
plsql-output = { path = "../plsql-output", version = "0.7.0" }
plsql-render = { path = "../plsql-render", version = "0.7.0" }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"

[lints]
workspace = true
