[package]
name = "plsql-mcp"
version = "0.5.0"
description = "Foundation MCP adapter for the PL/SQL Intelligence engine (Apache-2.0 OR MIT)"
edition.workspace = true
license.workspace = true

[features]
default = ["live-db"]
# Enables the live-DB tool surface (§13A.2). Runtime connections go through
# the published `oraclemcp-db` thin backend; the binary does not need Oracle
# Instant Client for the normal live-DB path. When disabled the binary still
# exposes the foundation static-analysis tools.
live-db = []
# Enables the live Oracle XE 23ai integration tests for the MCP live-DB
# tools (oracle-7nmg / PLSQL-MCP-LIVE-018). Runtime connections use the
# published pure-Rust `oraclemcp-db` backend; no Oracle Instant Client is
# required for this feature.
live-xe = []

[[bin]]
name = "plsql-mcp"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
asupersync = "=0.3.4"
clap = { version = "4", features = ["derive"] }
getrandom = "0.3"
# Depend on the published engine-free oraclemcp core (extracted to the standalone
# MuhDur/oraclemcp repo + crates.io). plsql-mcp is the full superset that adds the
# PL/SQL intelligence layer on top of this shared MCP spine.
oraclemcp-audit = "=0.4.0"
oraclemcp-auth = "=0.4.0"
oraclemcp-core = "=0.4.0"
oraclemcp-db = "=0.4.0"
oraclemcp-error = "=0.4.0"
oraclemcp-guard = "=0.4.0"
plsql-catalog = { path = "../plsql-catalog" }
plsql-cicd = { path = "../plsql-cicd" }
plsql-core = { path = "../plsql-core" }
plsql-depgraph = { path = "../plsql-depgraph" }
plsql-doc = { path = "../plsql-doc" }
plsql-engine = { path = "../plsql-engine" }
plsql-ir = { path = "../plsql-ir" }
plsql-lineage = { path = "../plsql-lineage" }
plsql-parser-antlr = { path = "../plsql-parser-antlr" }
plsql-sast = { path = "../plsql-sast" }
plsql-symbols = { path = "../plsql-symbols" }
plsql-output = { path = "../plsql-output" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml = "1.1"
tracing.workspace = true

[dev-dependencies]
asupersync = { version = "=0.3.4", features = ["test-internals"] }
getrandom = "0.3"

[lints]
workspace = true
